Notes can now be added

--- a/src/app/_template/template-header/template-header.component.sass
+++ b/src/app/_template/template-header/template-header.component.sass
@@ -1,7 +1,7 @@
 @import "src/sass/var"
 
 header
-  background-color: $TealGreen
+  background-color: $prime
   h1
     color: $White
     font-family: $font, sans-serif
