--- a/src/app/_template/template-scrum/template-scrum.component.sass
+++ b/src/app/_template/template-scrum/template-scrum.component.sass
@@ -6,9 +6,36 @@
   table
     width: 66%
     th
-      background-color: $TealGreen
+      background-color: $prime
       padding: 6px
       width: 22%
+      color: white
+.todo-form
+  display: flex
+  justify-content: center
+  form
+    background: #ffc
+    height: 12em
+    width: 12em
+    padding: 1em
+    box-shadow: 4px 3px 8px 1px #5c5c5c
+    -webkit-box-shadow: 4px 3px 8px 1px #5c5c5c
+    input
+      border: none
+      background: transparent
+      border-bottom: 1px solid grey
+      outline: none
+
+.sticky-note
+  text-decoration: none
+  color: #000
+  background: #ffc
+  display: block
+  height: 10em
+  width: 10em
+  padding: 1em
+  box-shadow: 4px 3px 8px 1px #5c5c5c
+  -webkit-box-shadow: 4px 3px 8px 1px #5c5c5c
 
 
 
