--- a/src/app/_template/template-header/template-header.component.html
+++ b/src/app/_template/template-header/template-header.component.html
@@ -1,6 +1,10 @@
 <header>
   <ul>
-    <li><img src='assets/img/Logo192.png' alt="Logo"></li>
-    <li><h1>Welcome to Scruumboard</h1></li>
+    <li>
+      <a href="https://siebo.xyz"><img src='assets/img/Logo192.png' alt="Logo"></a>
+    </li>
+    <li>
+      <h1>Welcome to Scruumboard</h1>
+    </li>
   </ul>
 </header>
