--- a/src/app/_template/template-header/template-header.component.sass
+++ b/src/app/_template/template-header/template-header.component.sass
@@ -5,14 +5,14 @@ header
   h1
     color: $White
     font-family: $font, sans-serif
-    text-transform: uppercase
+    font-size: 3rem
   ul
     list-style: none
-  li
-    display: inline-block
-    padding: $cube
-  img
-    width: 5rem
+    li
+      display: inline-block
+      padding: $cube
+    img
+      width: 5rem
 
 *
   margin-top: 0
