Adding tasks sends post request

--- a/src/app/_template/template-header/template-header.component.sass
+++ b/src/app/_template/template-header/template-header.component.sass
@@ -13,7 +13,9 @@ header
       padding: $cube
     img
       width: 5rem
-
+  a
+    color: $White
+    text-decoration: none
 *
   margin-top: 0
 
