--- a/src/sass/var.sass
+++ b/src/sass/var.sass
@@ -1,12 +1,12 @@
-$teal : #29a0b1
-$TealGreen: #167d7f
-$Spearmint: #98d7c2
-$mint: #ddffe7
+$tertiary : #90afc5
+$secondary: #336b87
+$prime: #2a3131
+$quartiary: #763626
+$White: #ffffff
 
 $cube: 1rem
 
-body
-  font-family: "Roboto Light"
+$font: Roboto
 
 
 
