--- a/src/app/_template/template-header/template-header.component.html
+++ b/src/app/_template/template-header/template-header.component.html
@@ -1,10 +1,11 @@
 <header>
   <ul>
     <li>
-      <a href="https://siebo.xyz"><img src='assets/img/Logo192.png' alt="Logo"></a>
+      <a routerLink="/"><img src='assets/img/Logo192.png' alt="Logo"></a>
     </li>
     <li>
       <h1>Welcome to Scruumboard</h1>
     </li>
+    <a routerLink="/login">Login</a>
   </ul>
 </header>
