--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'src/sass/var'
+
+body
+  background-image: url("/assets/img/London.jpg")
+  background-repeat: no-repeat
+  background-size: cover
+  margin: 0
+  padding: 0
+
+*
+  box-sizing: border-box
+  font-family: Arial, sans-serif
+
+
